--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button id="reset" >RESET</button>
             <button id="increase">INCREASE</button>
         </div>
+        <img src="./img/1.jpg" id="img" alt="Imagen" />
     </div>
 
     <script src="./script.js"></script>
